Applied flexbox properties to class='second' to ensure links/images are placed where needed to be. Still work to be done for flex-wrap properties to work properly. Refactoring still needs to be completed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ nav ul li {
     color: rgb(3 146 198 / 1);
 }
 
+#fastforward:hover {
+    opacity: 0.75;
+    color: rgb(3 146 198 / 1);
+}
+
 #background {
     border-bottom: 5px solid rgb(43, 43, 43);
     margin-bottom: 20px;
@@ -54,11 +59,6 @@ nav ul li {
     border: 2px solid black; */
 }
 
-/* .first-1 span {
-    display:block;
-    text-align: right;
-} */
-
 .first-2 {
     margin: 10px 0px 10px 0;
     padding-left: 10px;
@@ -73,10 +73,13 @@ nav ul li {
 
 .second {
     display:flex;
+    position: relative;
     flex-wrap: wrap;
+    flex-direction: row;
+    flex: 1 1 300px;
     margin-bottom: 20px;
-    /* Borders are for reference
-    border: 2px solid black; */
+    /* Borders are for reference */
+    border: 2px solid black;
 }
 
 .second-1 {
@@ -91,14 +94,55 @@ nav ul li {
     border: 2px solid black; */
 }
 
-.second div {
+.wild {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 40px;
-    border-left:5px solid rgb(43, 43, 43);
-    margin: 10px 0px 10px 0;
-    /* Borders are for reference
-    border: 2px solid black; */
+    flex-direction: column;
+}
+
+.wild-1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.second-2 {
+    width: 800px;
+    height: 500px;
+    border: 4px solid rgb(3 146 198 / 1);
+}
+
+.second-2 img {
+    opacity: 0.75;
+}
+
+.second-2 img:hover {
+    opacity: 1;
+}
+
+.second-3,
+.second-4,
+.second-5,
+.second-6 {
+    width: 380px;
+    height: 150px;
+    border: 4px solid rgb(3 146 198 / 1);
+    margin: 30px 0 0 0
+}
+
+.second-3 img,
+.second-4 img,
+.second-5 img,
+.second-6 img {
+    opacity: 0.75;
+}
+
+.second-3 img:hover,
+.second-4 img:hover,
+.second-5 img:hover,
+.second-6 img:hover {
+    opacity: 1;
 }
 
 .third {
@@ -127,6 +171,11 @@ nav ul li {
     color: rgb(43, 43, 43);
 }
 
+#third-2:hover {
+    opacity: 0.75;
+    color: rgb(43, 43, 43);
+}
+
 footer ul {
     display: flex;
     flex-wrap: wrap;
@@ -146,3 +195,6 @@ footer ul li {
     border: 2px solid black; */
 }
 
+@media screen and (max-width: 500px) {
+
+}
